syntax = "proto3";

package memos.store;

option go_package = "gen/store";

message Reaction {
  int32 id = 1;

  int64 created_ts = 2;

  int32 creator_id = 3;

  // content_id is the id of the content that the reaction is for.
  // This can be a memo. e.g. memos/101
  string content_id = 4;

  enum Type {
    TYPE_UNSPECIFIED = 0;
    EYES = 1;
    HEART = 2;
    LAUGH = 3;
    ROCKET = 4;
    THUMBS_DOWN = 5;
    THUMBS_UP = 6;
  }
  Type reaction_type = 5;
}
